<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_self"
    android:layout_marginTop="23dp"
    android:background="@color/colorPrimary">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="자가진단"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
// Q.1
        <FrameLayout
            android:id="@+id/frameLayout5"
            android:layout_width="330dp"
            android:layout_height="85dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/round_corner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12">

        </FrameLayout>

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/self_1"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/frameLayout5"
            app:layout_constraintTop_toTopOf="@+id/frameLayout5" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/frameLayout5"
            app:layout_constraintTop_toBottomOf="@+id/textView13">

            <RadioButton
                android:id="@+id/qestion1_choice1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/qestion1_choice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no" />
        </RadioGroup>
// Q.2
        <FrameLayout
            android:id="@+id/frameLayout7"
            android:layout_width="330dp"
            android:layout_height="85dp"
            android:background="@drawable/round_corner"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout5">

        </FrameLayout>

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/self_2"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/frameLayout7"
            app:layout_constraintTop_toTopOf="@+id/frameLayout7" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/frameLayout7"
            app:layout_constraintTop_toBottomOf="@+id/textView14">

            <RadioButton
                android:id="@+id/qestion2_choice1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/qestion2_choice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no" />
        </RadioGroup>

// Q.3
        <FrameLayout
            android:id="@+id/frameLayout8"
            android:layout_width="330dp"
            android:layout_height="85dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/round_corner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout7">

        </FrameLayout>

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/self_3"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/frameLayout8"
            app:layout_constraintTop_toTopOf="@+id/frameLayout8" />

        <RadioGroup
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/frameLayout8"
            app:layout_constraintTop_toBottomOf="@+id/textView15">

            <RadioButton
                android:id="@+id/qestion3_choice1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/qestion3_choice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no" />
        </RadioGroup>
// Q.4
        <FrameLayout
            android:id="@+id/frameLayout9"
            android:layout_width="330dp"
            android:layout_height="85dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/round_corner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout8">

        </FrameLayout>

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/self_4"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/frameLayout9"
            app:layout_constraintTop_toTopOf="@+id/frameLayout9" />

        <RadioGroup
            android:id="@+id/radioGroup3"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/frameLayout9"
            app:layout_constraintTop_toBottomOf="@+id/textView16">

            <RadioButton
                android:id="@+id/qestion4_choice1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/qestion4_choice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no" />
        </RadioGroup>
// Q.5
        <FrameLayout
            android:id="@+id/frameLayout10"
            android:layout_width="330dp"
            android:layout_height="85dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/round_corner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout9">

        </FrameLayout>

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/self_5"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/frameLayout10"
            app:layout_constraintTop_toTopOf="@+id/frameLayout10" />

        <RadioGroup
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/frameLayout10"
            app:layout_constraintTop_toBottomOf="@+id/textView17">

            <RadioButton
                android:id="@+id/qestion5_choice1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/qestion5_choice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no" />
        </RadioGroup>
// Q.6
        <FrameLayout
            android:id="@+id/frameLayout11"
            android:layout_width="330dp"
            android:layout_height="85dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/round_corner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout10">

        </FrameLayout>

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/self_6"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/frameLayout11"
            app:layout_constraintTop_toTopOf="@+id/frameLayout11" />

        <RadioGroup
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/frameLayout11"
            app:layout_constraintTop_toBottomOf="@+id/textView18">

            <RadioButton
                android:id="@+id/qestion6_choice1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/qestion6_choice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no" />
        </RadioGroup>
// Q.7
        <FrameLayout
            android:id="@+id/frameLayout12"
            android:layout_width="330dp"
            android:layout_height="85dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/round_corner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout11">

        </FrameLayout>

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/self_7"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/frameLayout12"
            app:layout_constraintTop_toTopOf="@+id/frameLayout12" />

        <RadioGroup
            android:id="@+id/radioGroup4"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/frameLayout12"
            app:layout_constraintTop_toBottomOf="@+id/textView19">

            <RadioButton
                android:id="@+id/qestion7_choice1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/qestion7_choice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no" />
        </RadioGroup>

        <Button
            android:id="@+id/submit_answers"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_corner"
            android:backgroundTint="@color/bright_gray"
            android:text="결과보기"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout12"
            android:onClick="submit_answers"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>